[package]
name = "meetup-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = "^1.0"
serde_json = "^1.0"
neo4rs = "0.7.1"
tokio = "1.38.0"

[dependencies.serenity]
version = "0.12.2"
features = ["framework", "standard_framework"]
